1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-lesson-service
spec:
  selector:
    app: frst-ls-app
  ports:
    - protocol: TCP
      port: 8001
      targetPort: web
  type: NodePort
